--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,7 +1,54 @@
+:root {
+  --branding-color: #cca8e9;
+  --secondary-color: #defcf9;
+  --third-color: #c3bef0;
+  --heading-font-family: "Playfair Display", serif;
+  --default-font-family: "Poppins", sans-serif;
+}
 h1 {
-  color: blue;
+  color: black;
 }
 p {
-    font-family: "Poppins", sans-serif;
-    font-weight: normal;
+  font-family: "Poppins", sans-serif;
+  font-weight: normal;
+}
+body {
+  font-family: var(--default-font-family);
+}
+h1,
+h2,
+h3,
+h5,
+h6 {
+  color: black;
+  font-family: var(--default-font-family);
+  font-weight: bold;
+}
+.hero {
+  background: var(--secondary-color);
+  text-align: center;
+  padding: 160px 20px;
+}
+.hero p {
+  font-family: "Poppins", serif;
+  font-weight: 36 px;
+}
+.hero h2 {
+  font-family: "Poppins", serif;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 2px;
+}
+
+.btn-branding {
+  border-radius: 4px;
+  color: var(--secondary-color);
+  font-size: 18px;
+  background-color: var(--branding-color);
+  line-height: 27px;
+  padding: 15px 30px;
+}
+.btn-branding:hover {
+  background-color: var(--third-color);
+  color: var(--secondary-color);
 }
