--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -24,6 +24,12 @@ h6 {
   font-family: var(--default-font-family);
   font-weight: bold;
 }
+h2
+{font-size: 48px;}
+p
+{font-weight: normal;
+  font-size: 16px;
+line-height: 30px;}
 .hero {
   background: var(--secondary-color);
   text-align: center;
@@ -52,3 +58,12 @@ h6 {
   background-color: var(--third-color);
   color: var(--secondary-color);
 }
+.btn-branding-outline 
+{
+  border-radius: 4px;
+  border: 1px solid --branding-color;
+  color: var(--branding-color);
+  font-size: 18px;
+  background-color: var(--secondary-color);
+  line-height: 27px;
+  padding: 15px 30px;}
