--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -67,3 +67,15 @@ line-height: 30px;}
   background-color: var(--secondary-color);
   line-height: 27px;
   padding: 15px 30px;}
+
+  .project-description
+  {padding: 120px 60px;}
+
+  @media (max-width:960px)
+  { .project-description
+    {padding: 0;
+    text-align: center;}}
+  
+  
+    
+  
