--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -24,12 +24,16 @@ h6 {
   font-family: var(--default-font-family);
   font-weight: bold;
 }
-h2
-{font-size: 48px;}
-p
-{font-weight: normal;
+h2 {
+  font-size: 48px;
+  margin: 30px;
+}
+p {
+  font-weight: normal;
   font-size: 16px;
-line-height: 30px;}
+  line-height: 30px;
+}
+
 .hero {
   background: var(--secondary-color);
   text-align: center;
@@ -53,29 +57,37 @@ line-height: 30px;}
   background-color: var(--branding-color);
   line-height: 27px;
   padding: 15px 30px;
+
+  margin-bottom: 20px;
 }
 .btn-branding:hover {
   background-color: var(--third-color);
   color: var(--secondary-color);
 }
-.btn-branding-outline 
-{
+.btn-branding-outline {
   border-radius: 4px;
   border: 1px solid --branding-color;
   color: var(--branding-color);
   font-size: 18px;
   background-color: var(--secondary-color);
   line-height: 27px;
-  padding: 15px 30px;}
+  padding: 15px 30px;
+}
 
-  .project-description
-  {padding: 120px 60px;}
+.project-description {
+  padding: 120px 60px;
+}
 
-  @media (max-width:960px)
-  { .project-description
-    {padding: 0;
-    text-align: center;}}
-  
-  
-    
-  
+@media (max-width: 960px) {
+  .project-description {
+    padding: 0;
+    text-align: center;
+  }
+  h1 {
+    font-size: 60px;
+    line-height: 2;
+  }
+  h2 {
+    font-size: 40px;
+  }
+}
