--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -49,7 +49,18 @@ p {
   font-size: 24px;
   line-height: 2px;
 }
+.about-section h1
+{font-size: 64px;
+line-height: 80px;}
 
+.about-section h2
+{font-size: 18px;
+font-family:var(--default-font-family);}
+
+ .about-section{ 
+  padding: 160px 20px;}
+.about-section-content
+{ margin: 30px;}
 .btn-branding {
   border-radius: 4px;
   color: var(--secondary-color);
@@ -100,4 +111,7 @@ p {
   h2 {
     font-size: 40px;
   }
+.about-section
+{text-align: center;
+padding:0;}
 }
