--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -98,14 +98,12 @@ text-align: center;}
   padding: 120px 60px;
 }
 
-.image-container {
-  width: 560px;
-  height: 560px;
-  margin-bottom: 100px;
-}
-.image-container img {
-  width: 100%;
-  height: 100%;
+.project-photo {
+    background-color: var(--secondary-color);
+    width: 500px;
+    height: 500px;
+    border: 3px solid var(--secondary-color);
+    padding: 15px;
 }
 
 @media (max-width: 960px) {
