--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,6 +1,6 @@
 :root {
-  --branding-color: #cca8e9;
-  --secondary-color: #defcf9;
+  --branding-color: #CFB4C7;
+  --secondary-color: rgb(192, 160, 197);
   --third-color: #c3bef0;
   --heading-font-family: "Playfair Display", serif;
   --default-font-family: "Poppins", sans-serif;
@@ -33,11 +33,15 @@ p {
   font-size: 16px;
   line-height: 30px;
 }
+body
+{
+  background-image:url(/images/allison-saeng-q5vZRglc5pk-unsplash.jpg);}
 
-.hero {
+  .hero {
   background: var(--secondary-color);
   text-align: center;
   padding: 160px 20px;
+  margin: 0 0 60px;
 }
 .hero p {
   font-family: "Poppins", serif;
@@ -64,20 +68,22 @@ margin: 20px 0 0;}
 
 .content p{
   font-size: 14px;
+  line-height: 1.5;
+  
 } 
 .content{ 
-  padding:0;
- margin: 30px;
+padding:0;
+margin: 30px;
 text-align: center;}
 
 .btn-branding {
   border-radius: 4px;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
   color: var(--secondary-color);
   font-size: 18px;
   background-color: var(--branding-color);
   line-height: 27px;
   padding: 15px 30px;
-
   margin-bottom: 20px;
 }
 .btn-branding:hover {
@@ -92,6 +98,7 @@ text-align: center;}
   background-color: var(--secondary-color);
   line-height: 27px;
   padding: 15px 30px;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
 }
 
 .project-description {
@@ -104,6 +111,12 @@ text-align: center;}
     height: 500px;
     border: 3px solid var(--secondary-color);
     padding: 15px;
+box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
+  }
+#social{
+font-size:  50px;
+color:rgb(247, 191, 214);
+opacity: 0.5;
 }
 
 @media (max-width: 960px) {
