--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,5 +1,5 @@
 :root {
-  --branding-color: #CFB4C7;
+  --branding-color: #cfb4c7;
   --secondary-color: rgb(192, 160, 197);
   --third-color: #c3bef0;
   --heading-font-family: "Playfair Display", serif;
@@ -33,11 +33,11 @@ p {
   font-size: 16px;
   line-height: 30px;
 }
-body
-{
-  background-image:url(/images/allison-saeng-q5vZRglc5pk-unsplash.jpg);}
+body {
+  background-image: url(/images/allison-saeng-q5vZRglc5pk-unsplash.jpg);
+}
 
-  .hero {
+.hero {
   background: var(--secondary-color);
   text-align: center;
   padding: 160px 20px;
@@ -53,31 +53,38 @@ body
   font-size: 24px;
   line-height: 2px;
 }
-.content h1
-{font-size: 64px;
-line-height: 80px;}
+.content h1 {
+  font-size: 64px;
+  line-height: 80px;
+}
 
-.content h2
-{font-size: 18px;
-font-family:var(--default-font-family);}
-.content h3
-{font-size: 24px;
-font-family: var(--default-font-family);
-line-height: 1.5;
-margin: 20px 0 0;}
+.content h2 {
+  font-size: 18px;
+  font-family: var(--default-font-family);
+}
+.content h3 {
+  font-size: 24px;
+  font-family: var(--default-font-family);
+  line-height: 1.5;
+  margin: 20px 0 0;
+}
 
-.content p{
+.content p {
   font-size: 14px;
   line-height: 1.5;
-  
-} 
-.content{ 
-padding:0;
-margin: 30px;
-text-align: center;}
+}
+.content {
+  padding: 0;
+  margin: 30px;
+}
+
+.content-container
+{padding: 160px;
+margin: 30px;;}
 
 .btn-branding {
   border-radius: 4px;
+  color: white;
   box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
   color: var(--secondary-color);
   font-size: 18px;
@@ -106,17 +113,17 @@ text-align: center;}
 }
 
 .project-photo {
-    background-color: var(--secondary-color);
-    width: 500px;
-    height: 500px;
-    border: 3px solid var(--secondary-color);
-    padding: 15px;
-box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
-  }
-#social{
-font-size:  50px;
-color:rgb(247, 191, 214);
-opacity: 0.5;
+  background-color: var(--secondary-color);
+  width: 500px;
+  height: 500px;
+  border: 3px solid var(--secondary-color);
+  padding: 15px;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
+}
+#social {
+  font-size: 50px;
+  color: rgb(247, 191, 214);
+  opacity: 0.5;
 }
 
 @media (max-width: 960px) {
@@ -131,7 +138,8 @@ opacity: 0.5;
   h2 {
     font-size: 40px;
   }
-.content-container
-{text-align: center;
-padding:0;}
+  .content-container {
+    text-align: center;
+    padding: 0;
+  }
 }
