--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -36,7 +36,26 @@ p {
 body {
   background-image: url(/images/allison-saeng-q5vZRglc5pk-unsplash.jpg);
 }
+nav
+{padding: 20px 0;}
+nav ul
+{padding: 0;
+margin: 0;}
+nav li{
+  display: inline;
+list-style: none;
+line-height: 42px;
+margin-left: 15px;}
+nav a
+{text-decoration: none;
+color: black;}
 
+nav a:hover{
+transition: all 100ms ease-in-out;
+}
+nav a:hover,
+nav li.active a
+{color:#7F5C72;}
 .hero {
   background: var(--secondary-color);
   text-align: center;
@@ -127,18 +146,25 @@ margin: 30px;;}
     object-fit: cover;
   border-radius: 25% 10%;
 ;}
+.logo
+{max-height:50px;
+}
 #social {
   font-size: 50px;
   color: rgb(247, 191, 214);
   opacity: 0.5;
 }
 
-@media (max-width: 960px) {
+@media (max-width: 960px) 
+{
+  .logo
+  {max-height: 30px;}
+  
   .project-description {
     padding: 0;
     text-align: center;
   }
-  h1 {
+    h1 {
     font-size: 60px;
     line-height: 2;
   }
@@ -149,4 +175,11 @@ margin: 30px;;}
     text-align: center;
     padding: 0;
   }
+nav a
+{font-size: 12px;}
+.hero h2
+{font-size: 14px;}
 }
+
+
+
