--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -8,6 +8,8 @@
 h1 {
   color: black;
 }
+h4
+{font-size: 48px;}
 p {
   font-family: "Poppins", sans-serif;
   font-weight: normal;
@@ -56,6 +58,36 @@ transition: all 100ms ease-in-out;
 nav a:hover,
 nav li.active a
 {color:#7F5C72;}
+
+footer .email-link {
+  text-decoration: none;
+  color: black;
+  font-size: 24px;
+}
+
+footer .email-link:hover {
+  color:#7F5C72
+}
+
+footer .social-links a {
+  margin: 0 20px;
+  color:#7F5C72;
+  background-color:var(--secondary-color) ;
+padding: 10px 15px;
+font-size:18px;
+  border-radius: 50%; 
+  transition: all 100ms ease-in-out;
+}
+footer .social-links a:hover {
+  color: white;
+  background: var(--branding-color);
+}
+
+.contact-box
+{background-color: hsl(322, 16%, 43%,0.3);
+  padding: 30px 120px;
+  border-radius: 10px;
+}
 .hero {
   background: var(--secondary-color);
   text-align: center;
@@ -131,7 +163,9 @@ margin: 30px;;}
 .project-description {
   padding: 120px 60px;
 }
-
+.project-description a:hover {
+  color: white;
+  background: var(--branding-color);}
 .project-photo {
   background-color: var(--secondary-color);
   width: 500px;
